--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       # Build
       - name: Build the file
         run: |
-          cd /home/runner/work/project-card/project-card
+          cd /home/runner/work/thingiverse-card/thingiverse-card
           npm install
           npm run build
 
@@ -24,7 +24,7 @@ jobs:
 
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: /home/runner/work/project-card/project-card/dist/project-card.js
-          asset_name: project-card.js
+          file: /home/runner/work/thingiverse-card/thingiverse-card/dist/thingiverse-card.js
+          asset_name: thingiverse-card.js
           tag: ${{ github.ref }}
           overwrite: true
