--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project-card",
+  "name": "thingiverse-card",
   "version": "0.0.0",
-  "description": "Lovelace project-card",
+  "description": "Lovelace thingiverse-card",
   "keywords": [
     "home-assistant",
     "homeassistant",
@@ -10,8 +10,8 @@
     "lovelace",
     "custom-cards"
   ],
-  "module": "project-card.js",
-  "repository": "git@github.com:bocklucas/project-card.git",
+  "module": "thingiverse-card.js",
+  "repository": "git@github.com:bocklucas/thingiverse-card.git",
   "author": "Lucas Bock <bocklucas@yahoo.ca>",
   "license": "MIT",
   "dependencies": {
